Dodano menu zmiany koloru piłeczki

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "hero-picture": "default",
+  "hero-picture": "FFFFF600",
   "developer-mode": true,
-  "level-unlocked": 1
+  "level-unlocked": 2
 }
